# docr

./: .gitignore  Makefile  README.md  pyproject.toml
docr/: __init__.py  __main__.py  cli.py  processor.py
