[project]
name = "docr"
version = "0.1.0"
description = "Convert documents, PDFs, and images to Markdown using OCR"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Erik Craddock", email = "erik@craddock.org"}
]
keywords = ["ocr", "pdf", "markdown", "document", "conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
]

dependencies = [
    "ocrmypdf>=16.0.0",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.23.0",
    "img2pdf>=0.5.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/evcraddock/docr"
Repository = "https://github.com/evcraddock/docr"
Issues = "https://github.com/evcraddock/docr/issues"

[project.scripts]
docr = "docr.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]